# cats-mcp-server

./: .env.example  .gitignore  .mcp.json.example  CATS-INTELLIGENCE-SYSTEM.md  ENDPOINT_COVERAGE_REPORT.md  EXAMPLE_server_all_tools_WITH_PROMPTS.py  FASTMCP_CLOUD_DEPLOYMENT.md  FASTMCP_CLOUD_SETUP_SUMMARY.md  README.md  claude_desktop_config.example.json  fastmcp.json  optimize_tools.py  prompts_recruiting.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  resources_candidates.py  response_helpers.py  server.py  server_all_tools.py  start.sh  toolsets_data.py  toolsets_default.py  toolsets_recruiting.py
archive/: cats_collection.json  newman_full.json
archive/old_servers/: server.py  server.py.backup  server_simple_18tools.py  server_simple_stdio.py
archive/test_files/: INTEGRATION_EXAMPLE.py  test_demo.py  verify_setup.py
docs/archive/: API_TOOLS_SUMMARY.md  CORE_INFRASTRUCTURE_SUMMARY.md  DELIVERY_RECRUITING_TOOLSETS.md  DELIVERY_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README_old_20tools.md  RECRUITING_QUICK_START.md  RECRUITING_TOOLSETS_SUMMARY.md  RECRUITING_WORKFLOW_EXAMPLES.md  SETUP_COMPLETE.md  STATUS_REPORT.md  TOOLSETS_DATA_SUMMARY.md  TOOLSETS_DEFAULT_SUMMARY.md
docs/deployment/: DEPLOYMENT.md
docs/guides/: HOW_TO_ADD_PROMPTS_RESOURCES.md
examples/: templates_emails.py
tests/: conftest.py  test_all_tools_comprehensive.py  test_response_helpers.py  test_server.py
